[package]
name = "voker"
version = "0.1.0"
authors = ["Michael Shaw <michaeljshaw@gmail.com>"]

[dependencies]
sass-rs = "0.2"
templar = { path = "../templar" }
notify = "4.0"
serde = "1.0"
serde_derive = "1.0"
docopt = "0.8"
hyper = "0.11"

futures = "0.1"
futures-cpupool = "0.1"

mime_guess = "2.0.0-alpha.2"

[lib]
doc = false

[[bin]]
name = "voker"
doc = false